--- a/index.html
+++ b/index.html
@@ -2,82 +2,122 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">   <title>Shortly URL shortening </title>
+<link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+<div class="navbar">
+  <div class="logo">
+    Logo
+  </div>
 
-  Features
-  Pricing
-  Resources
+<div class="navitems">  Features </div>
+<div class="navitems">   Pricing</div>
+<div class="navitems">  Resources</div>
+<div class="navbuttons">   
+<div class="navbuttons ">Login</div>
+<div class="navbuttons cyan">Sign Up</div>
+</div>
+</div>
 
-  Login
-  Sign Up
+<div class="container main">
+  <div class="heading">  More than just shorter links</div>
+  <div class="body-text">Build your brand’s recognition and get detailed insights 
+    on how your links are performing.</div>
+<button class='cyan'>  Get Started</button>
+  </div>
+<div class="container">
+  <div class="form">
+    <input type="text" placeholder="Shorten a link here..."/> <button class="cyan"> Shorten It!</button> 
+    <div class="history">
+      <div class="link">
+        <a class="original" href='https://frontendmentor.io'>https://frontendmentor.io</a> <a class="shorten" href='' >shorten</a>
+      </div>
+      ddd
+    </div>    
+  </div>
+</div>
 
-  More than just shorter links
+<div class='statistics-section'>
+<div class="heading">Advanced Statistics</div>
+<div class="body-text">Track how your links are performing across the web with our 
+  advanced statistics dashboard.</div>
+<div class="cards">
 
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
+  <div class="card">
+    <div class="image">
+      <div class="sub-heading">Brand Recognition </div>
+      <div class="body-text">Boost your brand recognition with each click. Generic links don’t 
+        mean a thing. Branded links help instil confidence in your content.
+      </div>
+    </div>
+  </div>
 
-  Get Started
+  <div class="card">
+    <div class="image">
+      <div class="sub-heading">Detailed Records </div>
+      <div class="body-text">
+        Gain insights into who is clicking your links. Knowing when and where 
+        people engage with your content helps inform better decisions.
+      </div>
+    </div>
+  </div>
 
-  Shorten It!
+  <div class="card">
+    <div class="image">
+      <div class="sub-heading">  Fully Customizable </div>
+      <div class="body-text">  Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</div>
+    </div>
+  </div>
 
-  Advanced Statistics
+</div>
+</div>
+<div class="callofaction">
+  <div class="heading">  Boost your links today</div>
+  <button class="cyan">  Get Started
+  </button>
+</div>
+<footer>
+  <div class="logo">Shortly</div>
+  <div class="externals">
+    <div class="features">
+      <div class="list-heading">   Features       </div>
+        <ul>
+          <li>  Link Shortening </li>
+          <li>  Branded Links</li>
+          <li>   Analytics</li>
+        </ul>
 
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
+    </div>
 
-  Brand Recognition
+    <div class="features">
+      <div class="list-heading">   Resources       </div>
+        <ul>
+          <li>    Blog </li>
+          <li>     Developers</li>
+          <li>    Support</li>
+        </ul>
 
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
+    </div>
 
-  Detailed Records
+    <div class="features">
+      <div class="list-heading">   Company       </div>
+        <ul>
+          <li>  About </li>
+          <li>  Our Team</li>
+          <li>  Careers</li>
+          <li>  Contact</li>
+        </ul>
+    </div>
+    <div class="social-media">
 
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
+    </div>
+  </div>
+</footer>
 
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<div class="attribution">
+    Design by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Lutif</a>.
   </div>
 </body>
 </html>
