--- a/index.html
+++ b/index.html
@@ -4,27 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">   <title>Shortly URL shortening </title>
 <link rel="stylesheet" href="./styles.css"/>
+<link href="https://fonts.googleapis.com/css?family=Poppins:500,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <div class="navbar">
   <div class="logo">
-    Logo
+    shortly
   </div>
 
-<div class="navitems">  Features </div>
-<div class="navitems">   Pricing</div>
-<div class="navitems">  Resources</div>
+<ul class='subnav'>
+  <li>
+    <a class="navitem">  Features </a>
+  </li>
+<li>
+  <a class="navitem">   Pricing</a>
+</li>
+<li>
+  <a class="navitem">  Resources</a>
+</li>
+</ul>
 <div class="navbuttons">   
-<div class="navbuttons ">Login</div>
-<div class="navbuttons cyan">Sign Up</div>
+<ul class='subnav'>
+  <li >
+    <button class="navbutton navitem ">Login</button>
+  </li>
+<li>
+  <button class="navbutton cyan navitem">Sign Up</button>
+</li>
+</ul>
 </div>
 </div>
 
 <div class="container main">
+  <div class="content">
   <div class="heading">  More than just shorter links</div>
   <div class="body-text">Build your brand’s recognition and get detailed insights 
-    on how your links are performing.</div>
-<button class='cyan'>  Get Started</button>
+    on how your links are performing.
+  </div>
+  <button class='cyan'>  Get Started</button>
+</div>
+<img class='main-image' src="./images/illustration-working.svg" alt="">
+
   </div>
 <div class="container">
   <div class="form">
