adding style to form area

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 </div>
 
-<div class="container main">
+<div class=" main">
   <div class="content">
   <div class="heading">  More than just shorter links</div>
   <div class="body-text">Build your brand’s recognition and get detailed insights 
@@ -50,13 +50,14 @@
 <div class="container">
   <div class="form">
     <input type="text" placeholder="Shorten a link here..."/> <button class="cyan"> Shorten It!</button> 
+  </div>
     <div class="history">
       <div class="link">
         <a class="original" href='https://frontendmentor.io'>https://frontendmentor.io</a> <a class="shorten" href='' >shorten</a>
       </div>
-      ddd
+
     </div>    
-  </div>
+
 </div>
 
 <div class='statistics-section'>
@@ -66,29 +67,28 @@
 <div class="cards">
 
   <div class="card">
-    <div class="image">
+    <img src='./images/icon-brand-recognition.svg' class="image" />
       <div class="sub-heading">Brand Recognition </div>
       <div class="body-text">Boost your brand recognition with each click. Generic links don’t 
         mean a thing. Branded links help instil confidence in your content.
       </div>
-    </div>
+    
   </div>
 
   <div class="card">
-    <div class="image">
+    <img src='./images/icon-detailed-records.svg' class="image" />
       <div class="sub-heading">Detailed Records </div>
       <div class="body-text">
         Gain insights into who is clicking your links. Knowing when and where 
         people engage with your content helps inform better decisions.
-      </div>
     </div>
   </div>
 
   <div class="card">
-    <div class="image">
+    <img src='./images/icon-fully-customizable.svg' class="image" />
       <div class="sub-heading">  Fully Customizable </div>
       <div class="body-text">  Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</div>
-    </div>
+
   </div>
 
 </div>
@@ -98,7 +98,7 @@
   <button class="cyan">  Get Started
   </button>
 </div>
-<footer>
+<Footer>
   <div class="logo">Shortly</div>
   <div class="externals">
     <div class="features">
@@ -134,7 +134,7 @@
 
     </div>
   </div>
-</footer>
+</Footer>
 
 <div class="attribution">
     Design by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
