adding styles to statistics section

--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
 <div class="heading">Advanced Statistics</div>
 <div class="body-text">Track how your links are performing across the web with our 
   advanced statistics dashboard.</div>
-<div class="cards">
+  <div class='style-line'></div>
+  <div class="cards">
 
   <div class="card">
-    <img src='./images/icon-brand-recognition.svg' class="image" />
+    <div class="image">
+    <img src='./images/icon-brand-recognition.svg'  /></div>
       <div class="sub-heading">Brand Recognition </div>
       <div class="body-text">Boost your brand recognition with each click. Generic links don’t 
         mean a thing. Branded links help instil confidence in your content.
@@ -76,7 +78,7 @@
   </div>
 
   <div class="card">
-    <img src='./images/icon-detailed-records.svg' class="image" />
+    <div  class="image"> <img src='./images/icon-detailed-records.svg' /></div>
       <div class="sub-heading">Detailed Records </div>
       <div class="body-text">
         Gain insights into who is clicking your links. Knowing when and where 
@@ -85,7 +87,7 @@
   </div>
 
   <div class="card">
-    <img src='./images/icon-fully-customizable.svg' class="image" />
+    <div class="image"><img src='./images/icon-fully-customizable.svg'  /></div>
       <div class="sub-heading">  Fully Customizable </div>
       <div class="body-text">  Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</div>
 
