--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">   <title>Shortly URL shortening </title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./styles.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins:500,700&display=swap" rel="stylesheet">
 
@@ -100,12 +101,11 @@
   <button class="cyan">  Get Started
   </button>
 </div>
-<Footer>
+<footer>
   <div class="logo">Shortly</div>
   <div class="externals">
     <div class="features">
-      <div class="list-heading">   Features       </div>
-        <ul>
+      <ul class="list-heading">   Features     
           <li>  Link Shortening </li>
           <li>  Branded Links</li>
           <li>   Analytics</li>
@@ -114,9 +114,8 @@
     </div>
 
     <div class="features">
-      <div class="list-heading">   Resources       </div>
-        <ul>
-          <li>    Blog </li>
+      <ul class="list-heading">   Resources       
+          <li>Blog </li>
           <li>     Developers</li>
           <li>    Support</li>
         </ul>
@@ -124,23 +123,26 @@
     </div>
 
     <div class="features">
-      <div class="list-heading">   Company       </div>
-        <ul>
+      <ul class="list-heading">   Company      
           <li>  About </li>
           <li>  Our Team</li>
           <li>  Careers</li>
-          <li>  Contact</li>
+          <li>Contact</li>
         </ul>
     </div>
     <div class="social-media">
+      <a class='icon' href='#'><ion-icon size="large" name="logo-facebook"></ion-icon></a>
+      <a class='icon' href='#'><ion-icon size="large" name="logo-twitter"></ion-icon></a>
+      <a class='icon' href='#'><ion-icon size="large" name="logo-pinterest"></ion-icon></a>
 
     </div>
   </div>
-</Footer>
+</footer>
 
 <div class="attribution">
     Design by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Lutif</a>.
   </div>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
