implement ajax request to api

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   </div>
 <div class="container">
   <div class="form">
-    <input type="text" placeholder="Shorten a link here..."/> <button class="cyan"> Shorten It!</button> 
+    <input type="text" class='url-input' placeholder="Shorten a link here..."/>
+     <button class="cyan" onclick="convert()"> Shorten It!</button> 
   </div>
     <div class="history">
       <div class="link">
@@ -144,5 +145,6 @@
     Coded by <a href="#">Lutif</a>.
   </div>
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
