add multurl convert feature

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
      <button class="cyan" onclick="convert()"> Shorten It!</button> 
   </div>
     <div class="history">
-      <div class="link">
-        <a class="original" href='https://frontendmentor.io'>https://frontendmentor.io</a> <a class="shorten" href='' >shorten</a>
-      </div>
+        <!-- <div class="link">
+          <a class="original" href='https://frontendmentor.io'>https://frontendmentor.io</a> <a class="shorten" href='' >shorten</a>
+        </div> -->
 
     </div>    
 
@@ -69,7 +69,7 @@
   <div class='style-line'></div>
   <div class="cards">
 
-  <div class="card">
+  <div class="card brand">
     <div class="image">
     <img src='./images/icon-brand-recognition.svg'  /></div>
       <div class="sub-heading">Brand Recognition </div>
@@ -79,7 +79,7 @@
     
   </div>
 
-  <div class="card">
+  <div class="card records">
     <div  class="image"> <img src='./images/icon-detailed-records.svg' /></div>
       <div class="sub-heading">Detailed Records </div>
       <div class="body-text">
@@ -88,7 +88,7 @@
     </div>
   </div>
 
-  <div class="card">
+  <div class="card customizable">
     <div class="image"><img src='./images/icon-fully-customizable.svg'  /></div>
       <div class="sub-heading">  Fully Customizable </div>
       <div class="body-text">  Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</div>
